force-app/main/default/objects/GiftTransaction/GiftTransaction.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>