force-app/main/default/objects/GiftTransaction/fields/Anything_else_to_tell_about_fundraising__c.field-meta.xml
<CustomField>
    <fullName>Anything_else_to_tell_about_fundraising__c</fullName>
    <label>Anything else to tell about fundraising?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>