force-app/main/default/objects/GiftTransaction/fields/Associated_Giving_Page__c.field-meta.xml
<CustomField>
    <fullName>Associated_Giving_Page__c</fullName>
    <label>Associated Giving Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Giving_Page_Name</valueSetName>
    </valueSet>
</CustomField>