force-app/main/default/objects/GiftTransaction/fields/Banked_Date__c.field-meta.xml
<CustomField>
    <fullName>Banked_Date__c</fullName>
    <label>Banked Date</label>
    <type>Date</type>
</CustomField>