force-app/main/default/objects/GiftTransaction/fields/Donation_made_as__c.field-meta.xml
<CustomField>
    <fullName>Donation_made_as__c</fullName>
    <inlineHelpText>Donation made as an Individual, Part of a company OR Part of a group / association</inlineHelpText>
    <label>Donation made as</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Part of a company</fullName>
            </value>
            <value>
                <fullName>Part of a group / association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>