force-app/main/default/objects/GiftTransaction/fields/Donor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Donor_Comments__c</fullName>
    <label>Donor Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>