force-app/main/default/objects/GiftTransaction/fields/Donor_Id__c.field-meta.xml
<CustomField>
    <fullName>Donor_Id__c</fullName>
    <description>Data Migration</description>
    <label>Donor Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>