force-app/main/default/objects/GiftTransaction/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <formula>Donor.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Name</label>
    <type>Text</type>
</CustomField>