force-app/main/default/objects/GiftTransaction/fields/Exclude_from_Findock_Gift_Aid_Processing__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Findock_Gift_Aid_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox ensures that related instalments auto created by Findock for Gift Aid Transactions are not eligible for Gift Aid</description>
    <inlineHelpText>Excludes related instalments from Gift Aid claims</inlineHelpText>
    <label>Exclude from Findock Gift Aid Processing</label>
    <type>Checkbox</type>
</CustomField>