force-app/main/default/objects/GiftTransaction/fields/fdff__Generated_Payment_Url__c.field-meta.xml
<CustomField>
    <fullName>fdff__Generated_Payment_Url__c</fullName>
    <label>Generated Payment Url</label>
    <type>Url</type>
</CustomField>