force-app/main/default/objects/GiftTransaction/fields/fdff__Payment_Profile__c.field-meta.xml
<CustomField>
    <fullName>fdff__Payment_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Profile</label>
    <referenceTo>cpm__Payment_Profile__c</referenceTo>
    <relationshipLabel>Gift Transactions</relationshipLabel>
    <relationshipName>Gift_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>