force-app/main/default/objects/GiftTransaction/fields/fdff__Recurring_Payment_QR__c.field-meta.xml
<CustomField>
    <fullName>fdff__Recurring_Payment_QR__c</fullName>
    <label>Recurring Payment QR</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>