force-app/main/default/objects/GiftTransaction/fields/fdff__Recurring_Payment_Url__c.field-meta.xml
<CustomField>
    <fullName>fdff__Recurring_Payment_Url__c</fullName>
    <label>Recurring Payment Url</label>
    <type>Url</type>
</CustomField>