force-app/main/default/objects/GiftTransaction/fields/Finance_Code__c.field-meta.xml
<CustomField>
    <fullName>Finance_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Code</label>
    <referenceTo>Finance_Codes__c</referenceTo>
    <relationshipLabel>Gift Transactions</relationshipLabel>
    <relationshipName>Gift_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>