force-app/main/default/objects/GiftTransaction/fields/Gift_Aid_Instalment_ID__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Instalment_ID__c</fullName>
    <label>Gift Aid Instalment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>