force-app/main/default/objects/GiftTransaction/fields/Gift_Commitment_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_Commitment_Status__c</fullName>
    <formula>TEXT(GiftCommitment.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Commitment Status</label>
    <type>Text</type>
</CustomField>