force-app/main/default/objects/GiftTransaction/fields/Gift_Transaction_ID_18_char__c.field-meta.xml
<CustomField>
    <fullName>Gift_Transaction_ID_18_char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Transaction ID (18 char)</label>
    <type>Text</type>
</CustomField>