force-app/main/default/objects/GiftTransaction/fields/How_was_the_money_raised__c.field-meta.xml
<CustomField>
    <fullName>How_was_the_money_raised__c</fullName>
    <label>How was the money raised?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My own organised activity/event</fullName>
            </value>
            <value>
                <fullName>An event/activity organised by FareShare</fullName>
            </value>
            <value>
                <fullName>An event/activity organised by another party eg London Marathon, Great North Run etc</fullName>
            </value>
            <value>
                <fullName>Another type of fundraising activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>