force-app/main/default/objects/GiftTransaction/fields/IG_Type__c.field-meta.xml
<CustomField>
    <fullName>IG_Type__c</fullName>
    <formula>IF(
    RecordType.Name = &quot;Receivable&quot;,
    IF(
        ISBLANK(GiftCommitmentId),
        &quot;Cash Giver&quot;,
        &quot;Regular Giver&quot;
    ),
    IF(
        RecordType.Name = &quot;Gift Aid&quot;,
        &quot;Gift Aid&quot;,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IG Type</label>
    <type>Text</type>
</CustomField>