force-app/main/default/objects/GiftTransaction/fields/Is_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Person_Account__c</fullName>
    <formula>Donor.IsPersonAccount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Person Account?</label>
    <type>Checkbox</type>
</CustomField>