force-app/main/default/objects/GiftTransaction/fields/JustGiving_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>JustGiving_Payment_Date__c</fullName>
    <label>JustGiving Payment Date</label>
    <type>Date</type>
</CustomField>