force-app/main/default/objects/GiftTransaction/fields/JustGiving_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>JustGiving_Payment_ID__c</fullName>
    <label>JustGiving Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>