force-app/main/default/objects/GiftTransaction/fields/md_npc_pack__Platform_Key__c.field-meta.xml
<CustomField>
    <fullName>md_npc_pack__Platform_Key__c</fullName>
    <externalId>true</externalId>
    <label>Platform Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>