force-app/main/default/objects/GiftTransaction/fields/Related_Gift_Aid_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Related_Gift_Aid_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Gift Aid Transaction</label>
    <referenceTo>GiftTransaction</referenceTo>
    <relationshipLabel>Gift Transactions</relationshipLabel>
    <relationshipName>Gift_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>