force-app/main/default/objects/GiftTransaction/fields/sj_DataCloud_GiftTransactionUI__c.field-meta.xml
<CustomField>
    <fullName>sj_DataCloud_GiftTransactionUI__c</fullName>
    <description>Identifier for Data Cloud matching records</description>
    <inlineHelpText>Identifier for Data Cloud matching records</inlineHelpText>
    <label>sj_DataCloud_GiftTransaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>