force-app/main/default/objects/GiftTransaction/fields/sj_UI_DataCloud_GiftTransaction__c.field-meta.xml
<CustomField>
    <fullName>sj_UI_DataCloud_GiftTransaction__c</fullName>
    <label>sj_UI_DataCloud_GiftTransaction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>