force-app/main/default/objects/GiftTransaction/fields/Training_Donor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Training_Donor_Comments__c</fullName>
    <label>Training Donor Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>