force-app/main/default/objects/GiftTransaction/recordTypes/Gift_Aid.recordType-meta.xml
<RecordType>
    <fullName>Gift_Aid</fullName>
    <active>true</active>
    <label>Gift Aid</label>
</RecordType>