force-app/main/default/objects/GiftTransaction/listViews/All_GiftTransactions.listView-meta.xml
<ListView>
    <fullName>All_GiftTransactions</fullName>
    <filterScope>Everything</filterScope>
    <label>All Gift Transactions</label>
</ListView>