force-app/main/default/objects/GiftTransaction/listViews/Last_Gift_Date.listView-meta.xml
<ListView>
    <fullName>Last_Gift_Date</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <columns>AcknowledgementStatus</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Income_Stream__c</field>
        <operation>equals</operation>
        <value>Major Donors</value>
    </filters>
    <filters>
        <field>AcknowledgementStatus</field>
        <operation>equals</operation>
        <value>To Be Sent</value>
    </filters>
    <label>MD - Next Actions &amp; Last Gift Date</label>
</ListView>