force-app/main/default/objects/GiftTransaction/listViews/Set_Finance_Code_on_Transactions.listView-meta.xml
<ListView>
    <fullName>Set_Finance_Code_on_Transactions</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Finance_Code__c</columns>
    <columns>Income_Stream__c</columns>
    <columns>Status</columns>
    <columns>Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Finance_Code__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>GiftTransaction.Receivable</value>
    </filters>
    <filters>
        <field>Channel__c</field>
        <operation>equals</operation>
        <value>JustGiving</value>
    </filters>
    <label>Set Finance Code on Donations</label>
    <sharedTo>
        <group>Fundraising_Team</group>
    </sharedTo>
</ListView>