force-app/main/default/objects/GiftTransaction/listViews/T_G_Transactions.listView-meta.xml
<ListView>
    <fullName>T_G_Transactions</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Income_Stream__c</field>
        <operation>equals</operation>
        <value>Trust &amp; Grants</value>
    </filters>
    <label>T&amp;G Transactions</label>
</ListView>